# misc

./: README  vimrc
cppcode/cpp11x/: cpp11x.sln  cpp11x.vcxproj  main.cpp
cppcode/tb-common-utils/.svn/: wc.db
cppcode/yaaf/: CMakeLists.txt  event_handler.cpp  event_handler.h  main.cpp  net_handler.cpp  net_handler.h
cppcode/yaaf/proto/: hello.pb.cc  hello.pb.h  hello.proto
gocode/: singleton.go
nginx-0.1.0/msbuild/: nginx-0.1.0.sln  nginx-0.1.0.vcxproj  nginx-0.1.0.vcxproj.filters
openresty/resty_apps/: page_hits.lua
openresty/resty_apps/todo/: main.lua
openresty/resty_apps/todo/lua/: auth.lua  info.lua  main.lua  update.lua
openresty/resty_apps/todo/static/: 404.html  echo.html  index.html  main.html
openresty/resty_apps/todo/static/js/: m.js
proto_helloworld/: hello.cpp  hello.pb.cc  hello.pb.h  hello.proto  helloworld.sln  helloworld.vcxproj
pycode/: enum.py
